# adbee

./: .gitignore  README.md  io.github.docmine17.adbee.yml  meson.build  run.py
data/: gschemas.compiled  io.github.docmine17.adbee.desktop.in  io.github.docmine17.adbee.gschema.xml  io.github.docmine17.adbee.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  es.po  meson.build  pt_BR.po
src/: adb_service.py  adbee.gresource  adbee.gresource.xml  adbee.in  main.py  meson.build  qr_generator.py  window.py  window.ui
